--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+
+
+*.csv
+*/*/*.sublime-*
 *.pyc
 *.profile
 
@@ -15,10 +19,14 @@ tags
 build/
 dist/
 
+
 data/*
+
 
 .nfs*
 *.dat
 *starting_kit.html
 *~
 run.sh
+
+paper
