--- a/environment.yml
+++ b/environment.yml
@@ -28,6 +28,7 @@ dependencies:
   # #Windows
   #- pytorch-cpu=0.4.0
   - pip:
+    - cma
     - https://api.github.com/repos/paris-saclay-cds/ramp-workflow/zipball/master
     - git+https://github.com/paris-saclay-cds/ssd_keras
     # #Windows
