--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,12 @@
-scipy==1.1.0
-numpy==1.14.5
-jupyter==1.0.0
-pandas==0.23.3
-xarray==0.10.8
-mahotas==1.4.4
-scikit-image==0.14.0
-scikit-learn==0.19.2
+scipy
+numpy
+jupyter
+pandas
+mahotas
+scikit-learn
 keras==2.2.0
-h5py==2.8.0
 tensorflow==1.8
-matplotlib==2.2.2
+matplotlib
 cma
 https://api.github.com/repos/paris-saclay-cds/ramp-workflow/zipball/master
 git+https://github.com/paris-saclay-cds/ssd_keras
