starting kit for data camp
notebook updated
illustration files changed
dangerous baselines removed
different lstm baselines added

--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ scikit-learn
 keras==2.2.0
 tensorflow==1.8
 matplotlib
+autograd
 cma
 https://api.github.com/repos/paris-saclay-cds/ramp-workflow/zipball/master
 git+https://github.com/paris-saclay-cds/ssd_keras
