--- a/environment.yml
+++ b/environment.yml
@@ -24,6 +24,7 @@ dependencies:
   # #Windows
   #- pytorch-cpu=0.4.0
   - pip:
+    - autograd
     - cma
     - https://api.github.com/repos/paris-saclay-cds/ramp-workflow/zipball/master
     - git+https://github.com/paris-saclay-cds/ssd_keras
